Separated editor classes into separate editor module.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,2 +1,25 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=234D6D46484A80DD7E5848A6E550914C
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Development
+StagingDirectory=(Path="Z:/Unreal Projects/Spriter")
+FullRebuild=False
+ForDistribution=False
+IncludeDebugFiles=False
+UsePakFile=True
+bGenerateChunks=False
+bBuildHttpChunkInstallData=False
+HttpChunkInstallDataDirectory=(Path=)
+HttpChunkInstallDataVersion=
+IncludePrerequisites=True
+IncludeCrashReporter=True
+InternationalizationPreset=English
+-CulturesToStage=en
++CulturesToStage=en
+DefaultCulture=en
+bCookAll=False
+bCookMapsOnly=False
+bCompressed=False
+
+
