Disabled crash reporter and 'anonymous' statistics.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -56,3 +56,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Test
 
+[/Script/Engine.EndUserSettings]
+bSendAnonymousUsageDataToEpic=False
+
